# metron

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Containerfile  DEPLOYMENT.md  DEVELOPMENT.md  Pipfile  README.md  SCALING.md  metron.env.example  pyproject.toml  pytest.ini
.docker/: .env.docker  Dockerfile  docker-compose.tests.yaml  docker-compose.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yml
.quadlet/: metron-anubis.container  metron-nginx.container  metron-postgres.container  metron-redis.container  metron-web.container  metron.network
anubis/: policy.yaml
api/: README.md  middleware.py  throttle.py  urls.py  views.py
comicsdb/: apps.py  autocomplete.py  db_functions.py  signals.py
comicsdb/admin/: arc.py  character.py  creator.py  genre.py  imprint.py  issue.py  publisher.py  series.py  team.py  universe.py  util.py
comicsdb/filters/: __init__.py  collection.py  issue.py  name.py  reading_list.py  series.py
comicsdb/fixtures/: series_type.yaml
comicsdb/forms/: arc.py  character.py  creator.py  credits.py  imprint.py  issue.py  publisher.py  series.py  team.py  universe.py  variant.py  widgets.py
comicsdb/migrations/: 0001_squashed_0028_update_series_types.py  0033_alter_series_unique_together.py  0034_gcd_id.py  0035_issue_alt_number.py  0036_publisher_country.py  0037_alter_arrayfields.py  0038_issue_foc_date.py  0039_alter_issue_sku.py  0040_alter_variant_sku.py  0041_add_new_price_moneyfield.py  0042_migrate_price_data.py  0043_finalize_price_moneyfield.py  0044_variant_price_variant_price_currency.py  0045_add_simple_history.py  0046_remove_flatpages.py  0047_add_additional_issue_idx.py  0047_issue_cover_hash_idx.py  0048_add_series_cv_id_gcd_id_idx.py  0048_issue_store_foc_date_idx.py  0049_add_cv_gcd_id_indexes.py  0050_remove_series_series_name_idx_and_more.py  0051_replace_name_btree_with_unaccent_trgm_indexes.py  0052_alter_historicalissue_price_currency_and_more.py  0053_fix_unaccent_trgm_index_case_folding.py  0053_series_alt_names.py  0054_series_alt_names.py  0055_add_alt_names_trgm_index.py
comicsdb/models/: __init__.py  arc.py  character.py  common.py  creator.py  genre.py  imprint.py  issue.py  publisher.py  series.py  team.py  universe.py  variant.py
comicsdb/serializers/: arc.py  character.py  creator.py  imprint.py  issue.py  publisher.py  series.py  team.py  universe.py
comicsdb/templatetags/: pagination_tags.py
comicsdb/urls/: arc.py  character.py  creator.py  home.py  imprint.py  issue.py  publisher.py  series.py  team.py  universe.py
comicsdb/views/: arc.py  character.py  constants.py  creator.py  history.py  home.py  imprint.py  issue.py  issue_list_helpers.py  mixins.py  publisher.py  ratings.py  series.py  series_list_helpers.py  statistics.py  team.py  universe.py
django_nyt/: conf.py  consumers.py  decorators.py  forms.py  models.py  routing.py  subscribers.py  urls.py  utils.py  views.py
django_nyt/migrations/: 0001_initial.py  0002_notification_settings.py  0003_subscription.py  0004_notification_subscription.py  0005__v_0_9_2.py  0006_auto_20141229_1630.py  0007_add_modified_and_default_settings.py  0008_auto_20161023_1641.py  0009_alter_notification_subscription_and_more.py  0010_settings_created_settings_modified_and_more.py
fail2ban/action.d/: firewallcmd-drop-zone.conf
fail2ban/filter.d/: metron-nginx-401.conf  metron-nginx-403.conf  metron-nginx-404.conf  metron-nginx-429.conf  (+3 more)
issue_ratings/: admin.py  apps.py  models.py  urls.py  views.py
metron/: choices.py  settings.py  urls.py  views.py
nginx/: nginx.conf
polls/: admin.py  models.py  urls.py  views.py
pull_list/: README.md  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
reading_lists/: API_README.md  README.md  TECHNICAL.md  admin.py  apps.py  autocomplete.py  cbl_importer.py  forms.py  models.py  signals.py  urls.py  views.py
scripts/: backup.sh
templates/: 404.html  500.html  base.html  footer.html  navbar.html  robots.txt
templatetags/: bulma_tags.py
tests/: conftest.py
timeline/: apps.py  urls.py  views.py
user_collection/: README.md  TECHNICAL.md  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
users/: admin.py  apps.py  converters.py  forms.py  models.py  opencollective.py  signals.py  urls.py  views.py
wiki/: admin.py  apps.py  checks.py  decorators.py  forms.py  forms_account_handling.py  managers.py  sites.py  urls.py
wish_list/: README.md  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
(+516 files in other folders)
