[project]
name = "metron"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "boto3",
    "chartkick",
    "django",
    "django-countries",
    "django-filter",
    "django-htmx",
    "django-htmx-autocomplete",
    "django-money",
    "django-rest-framework-condition",
    "django-simple-bulma",
    "django-simple-history",
    "django-storages",
    "djangorestframework",
    "drf-spectacular",
    "gunicorn",
    "imagehash",
    "isbnlib",
    "pillow",
    "psycopg[binary,pool]",
    "python-decouple",
    "redis",
    "sorl-thumbnail",
    "wiki",
]

[dependency-groups]
dev = [
    "coverage",
    "django-debug-toolbar",
    "djlint",
    "pre-commit",
    "pytest-cov",
    "pytest-django",
    "pytest-xdist",
    "ruff",
    "seed-isort-config",
]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
fix = true
line-length = 100
show-fixes = true
target-version = "py314"
lint.ignore = ["A003", "RUF012", "SLF001", "ISC001"]
lint.select = [
    "A",
    "B",
    "BLE",
    "C40",
    "DJ",
    "E",
    "F",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "TID",
    "UP",
    "W",
    "YTT",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"comicsdb/models/__init__.py" = ["I001"]
"comicsdb/migrations/*.py" = ["E501", "N806"]
"tests/*/*.py" = ["PLR2004", "PT004", "S101", "PLR0913"]
"users/apps.py" = ["PLC0415",]
"users/migrations/*.py" = ["E501", "N806"]

[tool.coverage.html]
directory = "test-results/coverage"

[tool.coverage.run]
source = ["comicsdb", "metron", "reading_lists","users", "user_collection"]
branch = true
concurrency = ["multiprocessing"]

[tool.coverage.report]
show_missing = true

[tool.djlint]
profile = "django"
ignore = "H031"

