[project]
name = "metron"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "bleach[css]",
    "boto3",
    "chartkick",
    "django>=5.2,<6.0",
    "django-countries",
    "django-filter",
    "django-htmx",
    "django-htmx-autocomplete",
    "django-money",
    "django-mptt",
    "django-rest-framework-condition",
    "django-sekizai",
    "django-simple-bulma",
    "django-simple-history",
    "django-storages",
    "djangorestframework",
    "drf-spectacular",
    "gunicorn",
    "imagehash",
    "isbnlib",
    "markdown",
    "pillow",
    "psycopg[binary,pool]",
    "pymdown-extensions",
    "python-decouple",
    "redis",
    "sorl-thumbnail",
]

[dependency-groups]
dev = [
    "coverage",
    "django-debug-toolbar",
    "djlint",
    "pre-commit",
    "pytest-cov",
    "pytest-django",
    "pytest-xdist",
    "ruff",
    "seed-isort-config",
]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
extend-exclude = ["django_nyt", "wiki"]
fix = true
line-length = 100
show-fixes = true
target-version = "py314"
lint.ignore = ["A003", "RUF012", "SLF001", "ISC001"]
lint.select = [
    "A",
    "B",
    "BLE",
    "C40",
    "DJ",
    "E",
    "F",
    "G",
    "I",
    "ICN",
    "INP",
    "ISC",
    "N",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "TID",
    "UP",
    "W",
    "YTT",
]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"comicsdb/models/__init__.py" = ["I001"]
"comicsdb/migrations/*.py" = ["E501", "N806"]
"django_nyt/migrations/*.py" = ["E501", "N806"]
"pull_list/migrations/*.py" = ["E501", "N806"]
"tests/*/*.py" = ["PLR2004", "PT004", "S101", "PLR0913"]
"users/apps.py" = ["PLC0415",]
"users/migrations/*.py" = ["E501", "N806"]
"wiki/**/mdx/*.py" = ["N802"]
"wiki/**/markdown_extensions.py" = ["N802"]
"wiki/migrations/*.py" = ["E501", "N806"]
"wiki/plugins/*/migrations/*.py" = ["E501", "N806"]
"wish_list/migrations/*.py" = ["E501", "N806"]

[tool.coverage.html]
directory = "test-results/coverage"

[tool.coverage.run]
source = ["comicsdb", "django_nyt","metron", "pull_list", "reading_lists", "users", "user_collection", "wiki", "wish_list"]
branch = true
concurrency = ["multiprocessing"]

[tool.coverage.report]
show_missing = true

[tool.djlint]
profile = "django"
ignore = "H031"

